--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,6 @@
   <title>Аудиоплеер</title>
     <!-- inject:css -->
     <!-- endinject -->
-    <!-- inject:js -->
-    <!-- endinject -->
 </head>
 <body>
   <header>
@@ -20,17 +18,19 @@
           <div class="controls">
             <div class="play"></div>
             <div class="pause"></div>
-            <div class="rew" onclick = 'return a.previous()'></div>
-            <div class="fwd" onclick = 'return a.next()' ></div>
+            <div class="rew" ></div>
+            <div class="fwd" ></div>
           </div>
           <div class="volume"></div>
           <div class="tracker"></div>
         </div>
       </div>
-      <ul class="playlistt">
+      <ul class="playlist">
         <div id = 'list' ></div>
       </ul>
     </div>
   </header>
+  <!-- inject:js -->
+  <!-- endinject -->
 </body>
 </html>
